--- a/app/templates/philosophie.hbs
+++ b/app/templates/philosophie.hbs
@@ -1,6 +1,9 @@
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Unsere Philosophie</h1>
+    <p>Die Bedürfnisse unserer Mandanten, wie insbesondere Sicherheit, Wertschätzung und Vertrauen stehen im Mittelpunkt
+      unseres Handelns. Durch individuelle Lösungen, Beratungsleistungen und bestmögliche Unterstützung verfolgen wir
+      das Ziel eine professionelle und erfolgreiche Beziehung zu Ihnen zu garantieren.</p>
 		<ul>
 			<li>Eine gute und fundierte Beratung macht unsere Mandanten erfolgreich.</li>
 			<li>Wir steuern und beraten unsere Mandanten auf dem Weg des Erfolges.</li>
