--- a/app/templates/ueberuns.hbs
+++ b/app/templates/ueberuns.hbs
@@ -1,18 +1,219 @@
 <div class="content-scroll">
-	<div class="scrollable">
-		<h1>Über Uns</h1>
-		<p>Wird bearbeitet...</p>
-		<br/>
-		<br/>
-		<br/>
-	</div>
+  <div class="scrollable">
+    <h1>Über uns</h1>
 
-	<div class="content-footer">
-		<div class="content-footer-content">
-			{{#link-to 'team'}}Das Team{{/link-to}}
-			{{#link-to 'jobs' class="content-footer-text-right"}}Jobangebote{{/link-to}}
-		</div>
-	</div>
+    <p>Unsere Mitarbeiter sind in Ihr Konzept eingebunden, kennen Ihre Ziele und begleiten Sie stetig und engagiert.
+      In regelmäßigen Gesprächen überprüfen wir die Strategie und korrigieren, wenn nötig, den Weg.</p>
+
+    <br/>
+    <table>
+      <tr>
+        <td>
+          <p><b>Josef Grieser</b></p>
+          <p>Dipl. Betriebswirt (FH); Steuerberater</p>
+          <p>07561/ 9122 34</p>
+          <p>Grieser.J@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Anita Katschke</b></p>
+          <p>Dipl. Betriebswirtin (FH); Steuerberaterin</p>
+          <p>07561/ 84899 13</p>
+          <p>A.Katschke@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Kurt Wolff</b></p>
+          <p>Steuerberater</p>
+          <p>07561/ 9122 34</p>
+          <p>K.Wolff@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Beate Geitzhaus</b></p>
+          <p>Dipl. Kaufmann Univ.; Steuerberaterin</p>
+          <p>07561/ 84899 26</p>
+          <p>B.Geitzhaus@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Josef Schupp</b></p>
+          <p>Bilanzbuchhalter</p>
+          <p>07561/ 84899 12</p>
+          <p>J.Schupp@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Gerhard Minarik</b></p>
+          <p>Steuerfachangestellter</p>
+          <p>07561/ 84899 21</p>
+          <p>G.Minarik@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Peter Straub</b></p>
+          <p>Steuerfachangestellter</p>
+          <p>07561/ 84899 45</p>
+          <p>P.Straub@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Tanja Gredler</b></p>
+          <p>Steuerfachangestellte; Wirtschaftsfachwirtin</p>
+          <p>07561/ 84899 19</p>
+          <p>T.Gredler@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Iris Müller</b></p>
+          <p>Steuerfachwirtin</p>
+          <p>07561/ 84899 35</p>
+          <p>I.Mueller@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Gabriele Hilsenbeck</b></p>
+          <p>Steuerfachwirtin</p>
+          <p>07561/ 84899 18</p>
+          <p>G.Hilsenbeck@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Elena Gann</b></p>
+          <p>Finanzbuchhalterin</p>
+          <p>07561/ 84899 25</p>
+          <p>E.Gann@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Tania Evers</b></p>
+          <p>Steuerfachangestellte</p>
+          <p>07561/ 84899 29</p>
+          <p>T.Evers@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Sonja Sonntag</b></p>
+          <p>Finanzbuchhalterin</p>
+          <p>07561/ 84899 33</p>
+          <p>S.Sonntag@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Karin Kibele</b></p>
+          <p>Betriebswirt VWA</p>
+          <p>07561/ 9122 34</p>
+          <p>K.Kibele@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Beate Biesinger</b></p>
+          <p>Volkswirtin</p>
+          <p>07561/ 84899 34</p>
+          <p>B.Biesinger@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Anne Fakler</b></p>
+          <p>Steuerfachangestellte</p>
+          <p>07561/ 84899 22</p>
+          <p>A.Fakler@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Christa Gundy</b></p>
+          <p>Buchhalterin</p>
+          <p>07561/ 84899 36</p>
+          <p>C.Gundy@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Manuel Männig</b></p>
+          <p>Steuerfachangestellter</p>
+          <p>07561/ 84899 17</p>
+          <p>M.Maennig@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Stefanie Thomann-Harr</b></p>
+          <p>Dipl. Finanzwirtin (FH)</p>
+          <p>07561/ 84899 16</p>
+          <p>S.Thomann@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Agatha Prinz</b></p>
+          <p>Finanzbuchhalterin</p>
+          <p>07561/ 84899 23</p>
+          <p>A.Prinz@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Evelyn Wocher</b></p>
+          <p>Steuerfachangestellte</p>
+          <p>07561/ 9122 34</p>
+          <p>E.Wocher@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Josef Staudt</b></p>
+          <p>Dipl. Betriebswirt (FH)</p>
+          <p>07561/ 84899 24</p>
+          <p>J.Staudt@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td><p><b>Laura Buffler</b></p>
+          <p>Auszubildende Steuerfachangestellte</p>
+          <p>07561/ 84899 22</p>
+          <p>L.Buffler@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Raphael Sperling</b></p>
+          <p>Bachelor of Arts/Steuer- und Prüfungswesen</p>
+          <p>07561/ 84899 38</p>
+          <p>R.Sperling@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Hannelore Burger</b></p>
+          <p>Sekretariat</p>
+          <p>07561/ 9122 34</p>
+          <p>H.Burger@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Cornelia Müller</b></p>
+          <p>Steuerfachangestellte</p>
+          <p>07561/ 84899 20</p>
+          <p>C.Mueller@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><b>Sabine Schüller</b></p>
+          <p>Steuerfachangestellte</p>
+          <p>07561/ 84899 39</p>
+          <p>S.Schueller@Steuerberater-Grieser.de</p>
+        </td>
+        <td>
+          <p><b>Cornelia Reutlinger</b></p>
+          <p>Steuerfachangestellte</p>
+          <p>07561/ 84899 44</p>
+          <p>C.Reutlinger@Steuerberater-Grieser.de</p>
+        </td>
+      </tr>
+    </table>
+    <br/>
+    <br/>
+    <br/>
+  </div>
+
+  <div class="content-footer">
+    <div class="content-footer-content">
+      {{#link-to 'ueberuns'}}Über Uns{{/link-to}}
+      {{#link-to 'jobs' class="content-footer-text-right"}}Jobangebote{{/link-to}}
+    </div>
+  </div>
 </div>
 
 {{image-container image='ueberuns'}}
