--- a/app/templates/kanzlei.hbs
+++ b/app/templates/kanzlei.hbs
@@ -1,22 +1,29 @@
 <div class="content-scroll">
-	<div class="scrollable">
+  <div class="scrollable">
     <h1>Willkommen in unserer Kanzlei</h1>
-		<p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
-		<p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unsere individuellen Leistungen
-			für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
-			wir uns selbstverständlich.</p>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-	</div>
+    <p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
+    <p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unsere individuellen Leistungen
+      für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
+      wir uns selbstverständlich.</p>
+    <br/>
+    <h1>Steuerbüro Grieser</h1>
+    <p>Bahnhof 11</p>
+    <p>88299 Leutkirch</p>
+    <p>Telefon: 07561/912234</p>
+    <p>Telefax: 07561/912235</p>
+    <p>info@steuerberater-grieser.de</p>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 
-	<div class="content-footer">
-		<div class="content-footer-content">
-			{{#link-to 'kontakt'}}Kontakt{{/link-to}}
-			{{#link-to 'team' class="content-footer-text-right"}}Das Team{{/link-to}}
-		</div>
-	</div>
+    <div class="content-footer">
+      <div class="content-footer-content">
+        {{#link-to 'kontakt'}}Kontakt{{/link-to}}
+        {{#link-to 'leistungen' class="content-footer-text-right"}}Leistungen{{/link-to}}
+      </div>
+    </div>
+  </div>
 </div>
 
 {{image-container image='service'}}
