new layout with boxes 3

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,6 +1,7 @@
 @import "config"
 @import "header"
 @import "images"
-@import "responsive/500"
+@import "navigation"
 @import "wrapper"
 @import "main"
+@import "responsive/500"
