--- a/app/templates/mandanten.hbs
+++ b/app/templates/mandanten.hbs
@@ -39,16 +39,27 @@
       <p style="margin-left: 130px;">Ausgabe: Juni 2018</p>
     </a>
     <br/>
+    <a href='../assets/blitzlicht/201807 - Blitzlicht.pdf' download>
+      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+      <p style="margin-left: 130px;">Ausgabe: Juli 2018</p>
+    </a>
+    <br/>
+    <a href='../assets/blitzlicht/201808 - Blitzlicht.pdf' download>
+      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+      <p style="margin-left: 130px;">Ausgabe: August 2018</p>
+    </a>
+    <br/>
+    <a href='../assets/blitzlicht/201809 - Blitzlicht.pdf' download>
+      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
+      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
+      <p style="margin-left: 130px;">Ausgabe: September 2018</p>
+    </a>
+    <br/>
     <br/>
 		<br/>
 		<br/>
-	</div>
-
-	<div class="content-footer">
-		<div class="content-footer-content">
-			{{#link-to 'informationen'}}Informationen{{/link-to}}
-			{{#link-to 'unterstuetzung' class="content-footer-text-right"}}Unterstützung{{/link-to}}
-		</div>
 	</div>
 </div>
 
