--- a/app/templates/pages.hbs
+++ b/app/templates/pages.hbs
@@ -24,20 +24,14 @@
 			</tr>
 			<tr>
 				<td><b>{{#link-to 'kontakt'}}<a href="">Kontakt</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'karte'}}<a href="">Karte</a>{{/link-to}}</td>
-				{{!--<td>{{#link-to 'kontaktformular'}}<a href="">Kontaktformular</a>{{/link-to}}</td>--}}
+				<td>{{#link-to 'datenschutz'}}<a href="">Datenschutzerklärung</a>{{/link-to}}</td>
+				<td>{{#link-to 'impressum'}}<a href="">Impressum</a>{{/link-to}}</td>
 			</tr>
 		</table>
     <br/>
     <br/>
 		<br/>
 		<br/>
-	</div>
-	<div class="content-footer">
-		<div class="content-footer-content">
-			{{#link-to 'kanzlei'}}Kanzlei{{/link-to}}
-			{{#link-to 'kontakt' class="content-footer-text-right"}}Kontakt{{/link-to}}
-		</div>
 	</div>
 </div>
 
