--- a/app/styles/config.scss
+++ b/app/styles/config.scss
@@ -1,4 +1,7 @@
 $color_primary: rgba(34, 36, 48, 0.98);
 $color_secondary: rgba(159, 159, 159, 0.98);
-$color_highlight_primary: #002174;
+$color_tertiary: #EBECE9;
+$color_highlight_primary: #001c4c;
 $color_highlight_secondary: rgb(155, 166, 194);
+
+$margin_table: 4px;
