--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,8 @@ ul {
 
 h1 {
 	padding: 6px;
-	margin: 6px 6px 12px 6px;
+	margin: 6px 6px 24px 6px;
+  color: $color_highlight_primary;
 	font-size: 1.2rem;
   font-weight: normal;
   border-left: 1px solid #EBECE9;
@@ -90,12 +91,6 @@ a:hover {
 	flex-direction: row;
 }
 
-.left {
-  margin-left: -14px;
-	height: 100%;
-  width: 15%;
-}
-
 .content {
   width: 70%;
 	height: 100%;
@@ -108,7 +103,7 @@ a:hover {
 	flex-direction: row;
 	justify-content: space-between;
 	height: 100%;
-	padding: 6px 6px;
+	padding: $margin_table;
 }
 
 .content-text {
@@ -125,44 +120,6 @@ a:hover {
 	flex: 10;
 }
 
-.content-footer {
-	background: linear-gradient(transparent, white, white);
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 70px;
-	align-items: flex-end;
-	display: flex;
-	justify-content: space-between;
-	padding-left: 0;
-	margin-right: 0;
-	float: left;
-	flex: 1;
-}
-
-.content-footer-content {
-	width: 100%;
-	border-bottom: solid 1px #EBECE9;
-}
-
-.content-footer a {
-  font-size: 14px;
-  margin-bottom: -1px;
-  border: 1px solid #EBECE9;
-  padding: 2px;
-	color: rgba(159, 159, 159, 0.98);
-}
-
-a:hover {
-	text-decoration: none;
-	color: #002174;
-}
-
-.content-footer-text-right {
-	float: right;
-  margin-top: -4px;
-}
-
 .content-scroll {
 	float: left;
 	height: 100%;
@@ -173,10 +130,11 @@ a:hover {
 }
 
 .content-img-container {
+  background-color: $color_tertiary;
   width: 30%;
   height: 100%;
-  padding: 6px;
-  border: solid 1px #EBECE9;
+  padding: $margin_table;
+  border: solid 1px $color_highlight_secondary;
 }
 
 .content-img {
@@ -187,11 +145,6 @@ a:hover {
 	background-size: cover;
 }
 
-.right {
-	height: 100%;
-  width: 15%;
-}
-
 .bottom {
 	height: 13%;
 }
@@ -200,28 +153,26 @@ a:hover {
 	position: fixed;
 	right: 30px;
 	bottom: 30px;
-}
 
-.impressum a {
-  padding: 4px;
-  background-color: rgba(255, 255, 255, 0.15);
-	color: white;
-	font-size: 14px;
-	text-align: center;
+  a {
+    padding: 4px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+  }
 }
 
 .datenschutz {
 	position: fixed;
 	right: 130px;
 	bottom: 30px;
-}
 
-.datenschutz a {
-  padding: 4px;
-  background-color: rgba(255, 255, 255, 0.15);
-	color: white;
-	font-size: 14px;
-	text-align: center;
+  a {
+    padding: 4px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+  }
 }
 
 .scrollable {
@@ -387,7 +338,7 @@ a:hover {
 		display: none;
 	}
 
-	.header {
+/*	.header {
 		height: 70px;
 
 		.header-left img {
@@ -403,7 +354,7 @@ a:hover {
 		.content {
 			flex: 16;
 		}
-	}
+	}*/
 
 	.impressum {
 		display: none;
@@ -411,12 +362,6 @@ a:hover {
 
 	.datenschutz {
 		display: none;
-	}
-}
-
-@media screen and (max-height: 500px) {
-	.top {
-		height: 21%;
 	}
 }
 
