--- a/app/templates/components/header-container.hbs
+++ b/app/templates/components/header-container.hbs
@@ -28,7 +28,7 @@
 
 		<div class="very-small header-pages">
 			{{#link-to 'pages'}}
-				<p><b>Menü</b></p>
+				<p>Menü</p>
 			{{/link-to}}
 		</div>
 
@@ -45,7 +45,7 @@
 			<div class="header-pages very-small">
 				<br/>
 				{{#link-to 'pages'}}
-					<p><b>Menü</b></p>
+					<p>Menü</p>
 				{{/link-to}}
 				<br/>
 			</div>
