--- a/app/templates/pages.hbs
+++ b/app/templates/pages.hbs
@@ -1,33 +1,28 @@
 <div class="content-scroll">
   <div class="scrollable">
 		<h1>Unsere Mobile Webseite</h1>
-		<table>
-			<tr>
-				<td><b>{{#link-to 'kanzlei'}}<a href="">Kanzlei</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'philosophie'}}<a href="">Philosophie</a>{{/link-to}}</td>
-				<td> {{#link-to 'service'}}<a href="">Service</a>{{/link-to}}</td>
-			</tr>
-			<tr>
-				<td><b>{{#link-to 'mandanten'}}<a href="">Mandanten</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'informationen'}}<a href="">Informationen</a>{{/link-to}}</td>
-				<td>{{#link-to 'unterstuetzung'}}<a href="">Unterstützung</a>{{/link-to}}</td>
-			</tr>
-			<tr>
-				<td><b>{{#link-to 'leistungen'}}<a href="">Leistungen</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'firmen'}}<a href="">Firmenkunden</a>{{/link-to}}</td>
-				<td>{{#link-to 'privat'}}<a href="">Privatkunden</a>{{/link-to}}</td>
-			</tr>
-			<tr>
-				<td><b>{{#link-to 'ueberuns'}}<a href="">Über Uns</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'team'}}<a href="">Das Team</a>{{/link-to}}</td>
-				<td>{{#link-to 'jobs'}}<a href="">Jobangebote</a>{{/link-to}}</td>
-			</tr>
-			<tr>
-				<td><b>{{#link-to 'kontakt'}}<a href="">Kontakt</a>{{/link-to}}</b></td>
-				<td>{{#link-to 'datenschutz'}}<a href="">Datenschutzerklärung</a>{{/link-to}}</td>
-				<td>{{#link-to 'impressum'}}<a href="">Impressum</a>{{/link-to}}</td>
-			</tr>
-		</table>
+
+		<p><b>{{#link-to 'kanzlei'}}<a href="">Kanzlei</a>{{/link-to}}</b><br/>
+		{{#link-to 'philosophie'}}<a href="">Philosophie</a>{{/link-to}}<br/>
+		 {{#link-to 'service'}}<a href="">Service</a>{{/link-to}}<br/>
+		<br/>
+		<b>{{#link-to 'mandanten'}}<a href="">Mandanten</a>{{/link-to}}</b><br/>
+		{{#link-to 'informationen'}}<a href="">Informationen</a>{{/link-to}}<br/>
+		{{#link-to 'unterstuetzung'}}<a href="">Unterstützung</a>{{/link-to}}<br/>
+		<br/>
+		<b>{{#link-to 'leistungen'}}<a href="">Leistungen</a>{{/link-to}}</b><br/>
+		{{#link-to 'firmen'}}<a href="">Firmenkunden</a>{{/link-to}}<br/>
+		{{#link-to 'privat'}}<a href="">Privatkunden</a>{{/link-to}}<br/>
+		<br/>
+		<b>{{#link-to 'ueberuns'}}<a href="">Über Uns</a>{{/link-to}}</b><br/>
+		{{#link-to 'team'}}<a href="">Das Team</a>{{/link-to}}<br/>
+		{{#link-to 'jobs'}}<a href="">Jobangebote</a>{{/link-to}}<br/>
+		<br/>
+		<b>{{#link-to 'kontakt'}}<a href="">Kontakt</a>{{/link-to}}</b><br/>
+	    {{#link-to 'datenschutz'}}<a href="">Datenschutzerklärung</a>{{/link-to}}<br/>
+		{{#link-to 'impressum'}}<a href="">Impressum</a>{{/link-to}}<br/></p>
+
+
     <br/>
     <br/>
 		<br/>
