--- a/app/templates/components/arrow-navigation.hbs
+++ b/app/templates/components/arrow-navigation.hbs
@@ -1,13 +1,18 @@
 {{#if show}}
   {{#link-to link}}
-    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="arrow" viewbox="0 0 100px 100px" transform={{transform}}>
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" class="navigation-arrow" viewbox="0 0 10 10" transform={{transform}}>
       <g>
-        <ellipse stroke="grey" ry="40" rx="40" cy="50" cx="50" stroke-width="1" fill="white" opacity="0.5"></ellipse>
-        <ellipse ry="37" rx="37"cy="50" cx="50" stroke-width="1" stroke="grey" fill="white"></ellipse>
-        <line y2="50" x2="25" y1="50" x1="60" stroke-width="1.5" stroke="darkgrey" fill="none"></line>
-        <line y2="30" x2="50" y1="50" x1="70" stroke-width="1.5" stroke="darkgrey" fill="none"></line>
-        <line y2="70" x2="50" y1="50" x1="70" stroke-width="1.5" stroke="darkgrey" fill="none"></line>
+        <ellipse stroke="grey" ry="33" rx="33" cy="50" cx="50" stroke-width="1" fill="white" opacity="0.6"></ellipse>
+        <ellipse ry="30" rx="30"cy="50" cx="50" stroke-width="1" stroke="grey" fill="white"></ellipse>
+	      <ellipse ry="31" rx="31"cy="50" cx="50" stroke-width="1" stroke="#222430" fill="white"></ellipse>
+        <line y2="50" x2="34" y1="50" x1="58" stroke-width="1" stroke="black" fill="none"></line>
+        <line y2="37" x2="54" y1="50" x1="66" stroke-width="1" stroke="black" fill="none"></line>
+        <line y2="63" x2="54" y1="50" x1="66" stroke-width="1" stroke="black" fill="none"></line>
       </g>
     </svg>
+
+{{!--    <div class="navigation-text">
+	    <p>{{linkName}}</p>
+    </div>--}}
   {{/link-to}}
 {{/if}}
