--- a/app/templates/components/rss-feed.hbs
+++ b/app/templates/components/rss-feed.hbs
@@ -1,89 +1,89 @@
-{{#unless feed}}
-	<div>
-		<svg class="lds-spinner" width="200px" height="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"
-				 preserveAspectRatio="xMidYMid" style="background: none;">
-			<g transform="rotate(0 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-3.1166666666666667s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(30 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-2.8333333333333335s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(60 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-2.55s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(90 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-2.2666666666666666s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(120 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.9833333333333334s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(150 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.7s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(180 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.4166666666666667s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(210 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.1333333333333333s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(240 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-0.85s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(270 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-0.5666666666666667s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(300 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-0.2833333333333333s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-			<g transform="rotate(330 50 50)">
-				<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">
-					<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="0s"
-									 repeatCount="indefinite"></animate>
-				</rect>
-			</g>
-		</svg>
-	</div>
-{{/unless}}
 
-<div>
-	{{#each feed as |item|}}
-		<p>{{item.date}}: <b><a href={{item.link}}>{{item.title}}</a></b></p>
-		<p>{{item.description}}</p>
-		<br/>
-	{{/each}}
-</div>
+	<!--<div>-->
+		<!--<svg class="lds-spinner" width="200px" height="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"-->
+				 <!--preserveAspectRatio="xMidYMid" style="background: none;">-->
+			<!--<g transform="rotate(0 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-3.1166666666666667s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(30 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-2.8333333333333335s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(60 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-2.55s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(90 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-2.2666666666666666s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(120 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.9833333333333334s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(150 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.7s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(180 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.4166666666666667s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(210 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-1.1333333333333333s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(240 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-0.85s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(270 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-0.5666666666666667s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(300 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="-0.2833333333333333s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+			<!--<g transform="rotate(330 50 50)">-->
+				<!--<rect x="48" y="34" rx="9.6" ry="6.8" width="4" height="4" fill="#002174">-->
+					<!--<animate attributeName="opacity" values="1;0" times="0;1" dur="3.4s" begin="0s"-->
+									 <!--repeatCount="indefinite"></animate>-->
+				<!--</rect>-->
+			<!--</g>-->
+		<!--</svg>-->
+	<!--</div>-->
+
+
+{{!--<div>-->
+	<!--{{#each feed as |item|}}-->
+		<!--<p>{{item.date}}: <b><a href={{item.link}}>{{item.title}}</a></b></p>-->
+		<!--<p>{{item.description}}</p>-->
+		<!--<br/>-->
+	<!--{{/each}}-->
+<!--</div>-->--}}
 
 {{yield}}
