--- a/app/templates/datenschutz.hbs
+++ b/app/templates/datenschutz.hbs
@@ -102,7 +102,10 @@
 
 		<p>Entfällt der Speicherungszweck oder läuft eine vom Europäischen Richtlinien- und Verordnungsgeber oder einem anderen zuständigen Gesetzgeber vorgeschriebene Speicherfrist ab, werden die personenbezogenen Daten routinemäßig und entsprechend den gesetzlichen Vorschriften gesperrt oder gelöscht.</p>
 
-		<h2>9. Rechte der betroffenen Person</h2>
+		<h2>9. Yahoo APIs</h2>
+		<p>Auf unserer Webseite wird ein Webservice des Unternehmens Oath (EMEA), Ltd. , 5-7 Point Square, North Wall Quay in nan Dublin 1, IRL (nachfolgend: Yahoo APIs) nachgeladen. Wir nutzen diese Daten, um die volle Funktionalität unserer Webseite zu gewährleisten. In diesem Zusammenhang wird Ihr Browser ggf. personenbezogene Daten an Yahoo APIs übermitteln. Rechtsgrundlage für die Datenverarbeitung ist Art. 6 Abs.1 lit. f DSGVO. Das berechtigte Interesse besteht in einer fehlerfreien Funktion der Internetseite. Die Löschung der Daten erfolgt, sobald der Zweck ihrer Erhebung erfüllt wurde. Weitere Informationen zum Handling der übertragenen Daten finden Sie in der Datenschutzerklärung von Yahoo APIs: https://policies.yahoo.com/ie/de/yahoo/privacy/index.htm. Sie können die Erfassung sowie die Verarbeitung Ihrer Daten durch Yahoo APIs verhindern, indem Sie die Ausführung von Script-Code in Ihrem Browser deaktivieren oder einen Script-Blocker in Ihrem Browser installieren (diesen finden Sie z.B. unter  www.noscript.net oder www.ghostery.com).</p>
+
+		<h2>10. Rechte der betroffenen Person</h2>
 		<ul style="list-style: none;">
 			<li><p><b>a)    Recht auf Bestätigung</b></p>
 				<p>Jede betroffene Person hat das vom Europäischen Richtlinien- und Verordnungsgeber eingeräumte Recht, von dem für die Verarbeitung Verantwortlichen eine Bestätigung darüber zu verlangen, ob sie betreffende personenbezogene Daten verarbeitet werden. Möchte eine betroffene Person dieses Bestätigungsrecht in Anspruch nehmen, kann sie sich hierzu jederzeit an einen Mitarbeiter des für die Verarbeitung Verantwortlichen wenden.</p>
