--- a/app/templates/informationen.hbs
+++ b/app/templates/informationen.hbs
@@ -1,9 +1,8 @@
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Informationen</h1>
-    <p>Aktuelle Nachrichten und Informationen zu Steuern und Recht:</p> <!--(Quelle: <a href="https://www.datev.de/">www.datev.de</a>):</p-->
-		  {{!rss-feed}}
-    <p><b>Unser RSS-Feed ist aufgrund der DSGVO vorläufig deaktiviert.</b></p>
+    <p>Aktuelle Nachrichten und Informationen zu Steuern und Recht (Quelle: <a href="https://www.datev.de/">www.datev.de</a>):</p>
+		  {{rss-feed}}
 	</div>
 </div>
 
