--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,24 +22,23 @@ ul {
 }
 
 h1 {
-	padding: 6px;
-	margin: 6px 6px 20px 6px;
+	margin: 28px 28px 28px 28px;
   color: $color_highlight_primary;
 	font-size: 1.2rem;
   font-weight: normal;
-  border-left: 1px solid #EBECE9;
 }
 
 h2 {
-	padding: 20px 20px 5px 14px;
-	margin-top: 0;
+	padding: 20px 20px 0 28px;
+	margin: 0;
 	font-size: 1rem;
 }
 
 p {
-	padding-left: 14px;
+	padding-left: 28px;
+	padding-right: 28px;
 	margin: 5px 0 5px 0;
-	line-height: 1.2rem;
+	line-height: 24px;
 }
 
 table {
